<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/itemText"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_weight="1"
        android:fontFamily="@font/open_sans"
        android:gravity="center_vertical"
        android:paddingStart="60dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editIncrement"
        android:layout_width="75dp"
        android:layout_height="40dp"
        android:layout_marginEnd="20dp"
        android:layout_weight="1"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:fontFamily="@font/open_sans"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/quantity"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/itemText"
        app:layout_constraintEnd_toStartOf="@+id/addInventory"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/currentQuantity"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addInventory"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:background="@drawable/rounded_button"
        android:onClick="addQuantity"
        android:padding="4dp"
        android:text="@string/add_to_inventory_btn"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/itemText"
        app:layout_constraintEnd_toStartOf="@+id/subtractInventory"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/subtractInventory"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:background="@drawable/rounded_button"
        android:text="@string/subtract_from_inventory_btn"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/itemText"
        app:layout_constraintEnd_toEndOf="@+id/itemText"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/currentQuantity"
        android:layout_width="56dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:text="@string/currentQuantity"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/itemText"
        app:layout_constraintStart_toStartOf="@+id/itemText"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>